--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@google/genai": "^0.15.0",
+    "classnames": "^2.5.1",
     "eventemitter3": "^5.0.1",
     "lodash": "^4.17.21",
-    "classnames": "^2.5.1",
-    "zustand": "^5.0.7",
-    "remarkable": "^2.0.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "remarkable": "^2.0.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.12",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
